# BebopS

./: CMakeLists.txt  package.xml
include/bebop_simulator_r2/: common.h  extendedKalmanFilter.h  filter_parameters.h  parameters.h  parameters_ros.h  position_controller.h  position_controller_with_bebop.h  stabilizer_types.h  transform_datatypes.h  waypoint_filter.h  waypointfilter_parameters.h
include/bebop_simulator_r2/bebop_simulator/: common.h  extendedKalmanFilter.h  filter_parameters.h  parameters_ros.h  waypointfilter_parameters.h
launch/: bebop_spawn.launch.py  spawn_bebop.py  spawn_bebop_launch.xml  spawn_bebop_rviz.xml  spawn_bebop_rviz_launch.xml
src/: position_controller_node.cpp
src/nodes/: hovering_example.cpp  position_controller_node.cpp  position_controller_node.h  position_controller_with_bebop_node.cpp  position_controller_with_bebop_node.h  quaternion_to_rpy.cpp  waypoint_example.cpp
urdf/: bebop.urdf.xacro  bebop_base.urdf.xacro  multirotor_base.urdf.xacro  wind_turbine.base.urdf.xacro  wind_turbine.gazebo.xacro
