<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bebop_simulator_r2</name>
  <version>0.0.1</version>
  <description>This package aims to simulate the behavior of the Parrot Bebop by using SIL methodologies.</description>
  <maintainer email="mr.artem.egorov@eyandex.ru">root</maintainer>
  <license>Apache-2.0</license>
  <author>Artem Egorov</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <url type="website">https://github.com/Artii24/BebopS</url>
  <!-- Dependencies needed to compile this package. -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
<!-- Dependencies needed to test this package. -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
